# MessengerWalkieTalkie

./: .gitignore  CMakeLists.txt  README.md
Client/: CMakeLists.txt  chatstate.cpp  chatstate.h  chatwindow.cpp  chatwindow.h  clientflowcontroller.cpp  clientflowcontroller.h  clientflowstate.cpp  clientflowstate.h  connectionwindow.cpp  connectionwindow.h  historystore.cpp  historystore.h  loginwindow.cpp  loginwindow.h  main.cpp  networkclient.cpp  networkclient.h  networkpacketdispatcher.cpp  networkpacketdispatcher.h  networktransportstate.cpp  networktransportstate.h  protocol.h
Server/: CMakeLists.txt  authservice.cpp  authservice.h  connection.cpp  connection.h  logger.cpp  logger.h  main.cpp  protocol.h  ratelimiter.cpp  ratelimiter.h  server.cpp  server.h  serverstorage.cpp  serverstorage.h  tlstcpserver.h  worker.cpp  worker.h
Shared/: authprotocol.h  tlsconfiguration.h  transportprotocol.h
Tests/: CMakeLists.txt  chat_state_tests.cpp  chat_window_integration_tests.cpp  client_flow_controller_integration_tests.cpp  client_flow_state_tests.cpp  client_history_tests.cpp  client_network_integration_tests.cpp  network_packet_dispatcher_tests.cpp  network_transport_state_tests.cpp  server_integration_tests.cpp  server_rate_limiter_tests.cpp  server_security_tests.cpp  sqlite_test_support.h  tls_integration_tests.cpp  tls_test_support.h
Tests/data/tls/: localhost-cert.pem  localhost-key.pem
